<resources>

    <string name="app_name">Plane Shooter</string>
    <string name="img_game_over">TODO</string>
    <string name="high_score">TextView</string>
    <string name="personal_best">Personal best:</string>
    <string name="score">TextView</string>
    <string name="text_score">Score:</string>
    <string name="exit">Exit</string>
    <string name="restart">Restart</string>
    <string name="img_play">TODO</string>
    <string name="start_game">Start Game</string>

</resources>